--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "cheerio": "github:AikerDev/cheeiro",
     "discord.js": "^12.5.3",
     "puppeteer": "^23.6.0",
-    "cookie-parser": "1.4.7",
+    "cookie-parser": "^1.4.7",
     "puppeteer-cluster": "^0.23.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
@@ -31,7 +31,10 @@
     "soundcloud-scraper": "^2.0.0",
     "string-similarity": "^4.0.4",
     "fuse.js": "^6.6.2",
-    "fast-levenshtein": "^2.0.6"
+    "fast-levenshtein": "^2.0.6",
+    "bcrypt": "^5.1.1",
+    "fs-extra": "^11.1.1",
+    "dotenv": "^16.3.1"
   },
   "engines": {
     "node": "20.x"
