--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   ],
   "routes": [
     {
+      "src": "/page/home",
+      "dest": "/public/page/home/index.html"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.js"
     }
