--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fuse.js": "^6.6.2",
     "fast-levenshtein": "^2.0.6",
     "bcrypt": "^5.1.1",
+    "multer": "2.0.2",
     "fs-extra": "^11.1.1",
     "dotenv": "^16.3.1"
   },
