--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,25 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/(.*)",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
+    {
+      "src": "/",
+      "dest": "/public/index.html"
+    },
+    {
+      "src": "/home",
+      "dest": "/public/home/index.html"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "/index.js"
+    },
     {
       "src": "/(.*)",
       "dest": "/index.js"
