Update destination path for home route in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
     },
     {
       "src": "/home",
-      "dest": "/public/home/page/index.html"
+      "dest": "/public/page/home/index.html"
     },
     {
       "src": "/api/(.*)",
