--- a/vercel.json
+++ b/vercel.json
@@ -12,16 +12,16 @@
   ],
   "routes": [
     {
-      "src": "/",
-      "dest": "/public/index.html"
+      "src": "^/api/(.*)$",
+      "dest": "/index.js"
     },
     {
-      "src": "/home",
+      "src": "^/home$",
       "dest": "/public/page/home/index.html"
     },
     {
-      "src": "/api/(.*)",
-      "dest": "/index.js"
+      "src": "^/$",
+      "dest": "/public/index.html"
     },
     {
       "src": "/(.*)",
