--- a/vercel.json
+++ b/vercel.json
@@ -4,28 +4,16 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "public/(.*)",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "^/api/(.*)$",
-      "dest": "/index.js"
-    },
-    {
-      "src": "^/home$",
-      "dest": "/public/page/home/index.html"
-    },
-    {
-      "src": "^/$",
-      "dest": "/public/index.html"
-    },
-    {
       "src": "/(.*)",
       "dest": "/index.js"
+    }
+        {
+      "src": "/home(.*)",
+      "dest": "/page/home/index.js"
     }
   ]
 }
