--- a/vercel.json
+++ b/vercel.json
@@ -4,28 +4,16 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
-    },
-    {
-      "src": "public/(.*)",
-      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/",
-      "dest": "/public/index.html"
-    },
-    {
-      "src": "/home",
-      "dest": "/public/page/home/index.html"
-    },
-    {
-      "src": "/home/(.*)",
-      "dest": "/public/page/home/$1"
-    },
-    {
       "src": "/(.*)",
-      "dest": "/public/$1"
+      "dest": "/index.js"
+    },
+    {
+      "src": "/home(.*)",
+      "dest": "/page/home/index.js"
     }
   ]
 }
