--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node-fetch": "^3.3.2",
     "google-translate-api-x": "*",
     "simple-git": "^3.25.0",
-  "uuid": "^9.0.1",
+    "uuid": "^9.0.1",
     "cheerio": "github:AikerDev/cheeiro",
     "discord.js": "^12.5.3",
     "puppeteer": "^23.6.0",
@@ -36,7 +36,15 @@
     "bcrypt": "^5.1.1",
     "multer": "2.0.2",
     "fs-extra": "^11.1.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+
+    // 🛡️ مكتبات الأمان والإضافات الجديدة:
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.3.1",
+    "compression": "^1.7.4",
+    "xss-clean": "^0.1.1",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-slow-down": "^2.0.0"
   },
   "engines": {
     "node": "20.x"
