--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs",
+  "name": "dark-api",
   "version": "1.0.0",
   "type": "module",
   "main": "index.js",
@@ -37,8 +37,6 @@
     "multer": "2.0.2",
     "fs-extra": "^11.1.1",
     "dotenv": "^16.3.1",
-
-    // 🛡️ مكتبات الأمان والإضافات الجديدة:
     "helmet": "^7.1.0",
     "express-rate-limit": "^7.3.1",
     "compression": "^1.7.4",
