--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "soundcloud-scraper": "^2.0.0",
     "string-similarity": "^4.0.4",
     "fuse.js": "^6.6.2",
+    "firebase": "^10.4.0",  
     "fast-levenshtein": "^2.0.6",
     "bcrypt": "^5.1.1",
     "multer": "2.0.2",
