--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,12 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "index.js",
-      "use": "@vercel/node"
-    }
+    { "src": "index.js", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/index.js"
-    }
+  
+    { "src": "/(.*\\.(js|css|png|jpg|jpeg|mp4|svg))", "dest": "/public/$1" },
+    
+    { "src": "/(.*)", "dest": "/index.js" }
   ]
 }
