--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,31 @@
 {
   "version": 2,
   "builds": [
-    { "src": "index.js", "use": "@vercel/node" }
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-  
-    { "src": "/(.*\\.(js|css|png|jpg|jpeg|mp4|svg))", "dest": "/public/$1" },
-    
-    { "src": "/(.*)", "dest": "/index.js" }
+    {
+      "src": "/(.*\\.js|.*\\.css|.*\\.mp4|.*\\.jpg|.*\\.png|.*\\.gif)",
+      "dest": "/public/$1"
+    },
+    {
+      "src": "/api/(.*)",
+      "dest": "/index.js"
+    },
+    {
+      "src": "/pages/(.*)",
+      "dest": "/public/pages/$1/index.html"
+    },
+    {
+      "src": "/",
+      "dest": "/public/index.html"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
+    }
   ]
 }
